--- a/atv01/index.html
+++ b/atv01/index.html
@@ -31,6 +31,13 @@
         <b>Universidade Católica de Pernambuco</b>, onde deu ínicio a sua 
         graduação no curso de Ciência da Computação e onde atualmente se encontra no <b>5° Período</b>.
       </p>
+      <video src="https://www.w3schools.com/tags/movie.mp4" controls>
+        Seu navegador não suporta a tag vídeo.
+      </video>
+      <br>
+      <audio src="https://christianosantos.com/files/cs1/musica02.mp3" controls autoplay loop >
+        Seu navegador não suporta a tag audio.
+      </audio>
       <h3>Uma citação:</h3>
       <em
         >Faça o teu melhor, na condição que você tem, enquanto você não tem condições melhores, para fazer melhor ainda!
