--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <li><a href="atv02/">Atv 02 - Tabelas,Listas,iFrames e Formulários</a></li>
       <li><a href="atv03/cadastroUsuario.html">Atv 03 - Cadastro do usuário</a></li>
       <li><a href="atv04\index.html">Atv 04 - Biografia + CSS</a></li>
+      <li><a href="atv05\index.html">Atv 05 - Fetch - API Pública</a></li>
     </ol>
   </body>
 </body>
